--- a/SafeCity/SafeCity.Client/wwwroot/apeal.html
+++ b/SafeCity/SafeCity.Client/wwwroot/apeal.html
@@ -26,7 +26,7 @@
             <div class="collapse navbar-collapse" id="navbarContent">
                 <ul class="navbar-nav ms-auto mb-2">
                     <li class="nav-item ">
-                        <a class="nav-link" href="">
+                        <a class="nav-link" href="index.html">
                             <div class="linc-color">Главная</div>
                         </a>
                     </li>
@@ -51,7 +51,7 @@
                 <h1>Форма обратной звязи</h1>
             </div>
             <div class="appeal__item">
-                <select id="сategoryAppeal" class="appeal__select">
+                <select id="appealCategory" class="appeal__select">
                     <option selected="selected" value="10">Выберите категорию обращения</option>
                 </select>
             </div>
@@ -61,21 +61,21 @@
             </div>
 
             <div class="appeal__item">
-                <input type="tel" required placeholder="Телефон" class="appeal__iput">
+                <input type="text" required placeholder="Телефон" class="appeal__iput" id="input_phone">
             </div>
 
             <div class="appeal__item">
-                <input type="text" required placeholder="Адрес" class="appeal__iput">
+                <input type="text" required placeholder="Адрес" class="appeal__iput" id="input_address">
             </div>
 
             <div class="appeal__item">
-                <input type="" required placeholder="Введите ваше обращение" class="appeal__message"
+                <input type="text" required placeholder="Введите ваше обращение" class="appeal__message"
                     id="input_message">
             </div>
 
-            <div class="appeal__item">
+            <!--<div class="appeal__item">
                 <input type="file">
-            </div>
+            </div>-->
 
             <div class="appeal__item">
                 <input type="checkbox" id="check"> Я согласен / cогласна на обработку персональных данных
