* дополнение к ветке с переименованием заголовков

--- a/SafeCity/SafeCity.UI/wwwroot/index.html
+++ b/SafeCity/SafeCity.UI/wwwroot/index.html
@@ -94,7 +94,7 @@
                 <button type="button" onClick="location.href='apeal.html'" class="btn btn-danger">Безопасность на дорогах</button>
             </dvi>
             <dvi class="feedback--item">
-                <button type="button" onClick="location.href='apeal.html'" class="btn btn-warning">Проблемы градоустройства</button>
+                <button type="button" onClick="location.href='apeal.html'" class="btn btn-warning">Комфортность проживания</button>
             </dvi>
 
             <script>
