+ модуль файлового хранилища и функционал сохранения полученных с клиента файлов

--- a/SafeCity/SafeCity.Client/wwwroot/index.html
+++ b/SafeCity/SafeCity.Client/wwwroot/index.html
@@ -15,8 +15,7 @@
 <body>
 <header class="header container-lg">
     <nav class="navbar navbar-expand-md navbar-light bg-light">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
-                aria-controls="navbarContent" aria-expanded="false">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false">
             <span class="navbar-toggler-icon"></span>
         </button>
 
@@ -30,7 +29,7 @@
                 </li>
                 <li class="nav-item">
                     <a class="nav-link " href="apeal.html">
-                        <div class="linc-color">Решение проблемы</div>
+                        <div class="linc-color">Обращения граждан</div>
                     </a>
                 </li>
                 <li class="nav-item">
@@ -53,11 +52,8 @@
     <h3 class="text-color">Омск, Советский округ</h3>
 </div>
 <div class="container-lg">
-    <p>Проект направлен на создание комфортной и безопасной среды для проживания в городе Омске. Позволяет горожанам
-        принять участие в жизни своего города и округа, выявить проблемы, повлиять на качество жизни, обеспечить
-        возможности взаимодействия с
-        государственными и муниципальными властями Омска для поиска решений и реализации гражданских инициатив на
-        информационном, консультационном и методическом уровнях.</p>
+    <p>Проект направлен на создание комфортной и безопасной среды для проживания в городе Омске. Позволяет горожанам принять участие в жизни своего города и округа, выявить проблемы, повлиять на качество жизни, обеспечить возможности взаимодействия с
+        государственными и муниципальными властями Омска для поиска решений и реализации гражданских инициатив на информационном, консультационном и методическом уровнях.</p>
 </div>
 
 <div class="container-lg">
@@ -67,7 +63,7 @@
                 <p style="color: red; font-weight: 700; font-size: 30px;">45</p>
             </div>
             <div class="stat--text">
-                <p>Проблемы безопасности</p>
+                <p>Безопасность на дорогах</p>
             </div>
         </dvi>
         <dvi class="stat--item">
@@ -75,7 +71,7 @@
                 <p style="color: rgb(212, 193, 19); font-weight: 700; font-size: 30px;">30</p>
             </div>
             <div class="stat--text">
-                <p>Проблемы градоустройства</p>
+                <p>Комфортность проживания</p>
             </div>
         </dvi>
         <dvi class="stat--item">
@@ -95,16 +91,10 @@
             <p class="stat--text">Сообщить о проблеме:</p>
         </dvi>
         <dvi class="feedback--item">
-            <button type="button"
-                    onClick="setAppealClassLocalStorage('Безопасность на дорогах');location.href='apeal.html'"
-                    class="btn btn-danger">Безопасность на дорогах
-            </button>
+            <button type="button" onClick="location.href='apeal.html'" class="btn btn-danger">Безопасность на дорогах</button>
         </dvi>
         <dvi class="feedback--item">
-            <button type="button"
-                    onClick="setAppealClassLocalStorage('Комфортное проживание');location.href='apeal.html'"
-                    class="btn btn-warning">Проблемы градоустройства
-            </button>
+            <button type="button" onClick="location.href='apeal.html'" class="btn btn-warning">Комфортность проживания</button>
         </dvi>
 
         <script>
@@ -112,24 +102,21 @@
                 localStorage.setItem('appealClass', nameClass);
             }
         </script>
+
     </div>
 </div>
 
 <div class="container-lg">
-    <script type="text/javascript" charset="utf-8" async
-            src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab02f5bb7ef00f5ce40b2b7ff25c85fcbeb539c8296cd89e973032043df5831fe&amp;width=100%&amp;height=433&amp;lang=ru_RU&amp;scroll=true"></script>
+    <script type="text/javascript" charset="utf-8" async src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab02f5bb7ef00f5ce40b2b7ff25c85fcbeb539c8296cd89e973032043df5831fe&amp;width=100%&amp;height=433&amp;lang=ru_RU&amp;scroll=true"></script>
 </div>
 
 <div class="container-lg">
-    <h3 class="made text-color">Нами сделано:</h3>
+    <h3 class="made text-color">Уже решено:</h3>
     <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
@@ -154,13 +141,11 @@
                 </div>
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
         </button>
@@ -183,6 +168,7 @@
         </div>
     </div>
 </footer>
+
 
 
 <script src="js/bootstrap.js"></script>
