--- a/SafeCity/SafeCity.UI/wwwroot/apeal.html
+++ b/SafeCity/SafeCity.UI/wwwroot/apeal.html
@@ -17,8 +17,7 @@
 <body>
     <header class="header container-lg">
         <nav class="navbar navbar-expand-md navbar-light bg-light">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
-                aria-controls="navbarContent" aria-expanded="false">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false">
                 <span class="navbar-toggler-icon"></span>
             </button>
 
@@ -26,7 +25,7 @@
             <div class="collapse navbar-collapse" id="navbarContent">
                 <ul class="navbar-nav ms-auto mb-2">
                     <li class="nav-item ">
-                        <a class="nav-link" href="">
+                        <a class="nav-link" href="index.html">
                             <div class="linc-color">Главная</div>
                         </a>
                     </li>
@@ -51,7 +50,7 @@
                 <h1>Форма обратной звязи</h1>
             </div>
             <div class="appeal__item">
-                <select id="сategoryAppeal" class="appeal__select">
+                <select id="appealCategory" class="appeal__select">
                     <option selected="selected" value="10">Выберите категорию обращения</option>
                 </select>
             </div>
@@ -61,16 +60,15 @@
             </div>
 
             <div class="appeal__item">
-                <input type="tel" required placeholder="Телефон" class="appeal__iput">
+                <input type="text" required placeholder="Телефон" class="appeal__iput" id="input_phone">
             </div>
 
             <div class="appeal__item">
-                <input type="text" required placeholder="Адрес" class="appeal__iput">
+                <input type="text" required placeholder="Адрес" class="appeal__iput" id="input_address">
             </div>
 
             <div class="appeal__item">
-                <input type="" required placeholder="Введите ваше обращение" class="appeal__message"
-                    id="input_message">
+                <input type="text" required placeholder="Введите ваше обращение" class="appeal__message" id="input_message">
             </div>
 
             <div class="appeal__item">
@@ -92,13 +90,10 @@
         <div class="container-lg">
             <div class="footer--inner">
                 <div class="footer--item">
-                    Контакты и обращения <br>
-                    8-950-783-62-65 <br>
-                    bkg@sibadi.org
+                    Контакты и обращения <br> 8-950-783-62-65 <br> bkg@sibadi.org
                 </div>
                 <div class="footer--item">
-                    2021 ФГБОУ ВО «СибАДИ» <br>
-                    644080, г. Омск, пр. Мира 5
+                    2021 ФГБОУ ВО «СибАДИ» <br> 644080, г. Омск, пр. Мира 5
                 </div>
                 <div class="footer--item">
                     <a style="color: white; text-decoration: none;" href=""> Техподдержка сайта <br> </a>
