* добавил возможность передавать на сервер вложение

--- a/SafeCity/SafeCity.Client/wwwroot/apeal.html
+++ b/SafeCity/SafeCity.Client/wwwroot/apeal.html
@@ -73,9 +73,9 @@
                     id="input_message">
             </div>
 
-            <!--<div class="appeal__item">
-                <input type="file">
-            </div>-->
+            <div class="appeal__item">
+                <input type="file" id="attachment">
+            </div>
 
             <div class="appeal__item">
                 <input type="checkbox" id="check"> Я согласен / cогласна на обработку персональных данных
