--- a/SafeCity/SafeCity.Client/wwwroot/apeal.html
+++ b/SafeCity/SafeCity.Client/wwwroot/apeal.html
@@ -48,7 +48,7 @@
     <form class="container-lg appeal" name="feedback" method="POST" action="">
         <div class="appeal__inner">
             <div class="appeal__title">
-                <h1>Форма обратной звязи</h1>
+                <h1>Форма обратной cвязи</h1>
             </div>
             <div class="appeal__item">
                 <select id="appealCategory" class="appeal__select">
