--- a/UI/index.html
+++ b/UI/index.html
@@ -11,14 +11,16 @@
 <body>
     <header class="header">
 		<div class="container">
-			<div class="header__menu">
-				<ul class="header__nav">
-					<li class="header__nav-item"><a href="#">Главная</a></li>
-					<li class="header__nav-item"><a href="#">Обращения граждан</a></li>
-					<li class="header__nav-item"><a href="#">Контакты</a></li>
-				</ul>
-			</div>
-            <p>ПРОЕКТ СИБИРСКОГО ГОСУДАРСТВЕННОГО АВТОМОБИЛЬНО-ДОРОЖНОГО УНИВЕРСИТЕТА (СИБАДИ)</p>
+            <div class="header__wraper">
+                <div class="header__menu">
+                    <ul class="header__nav">
+                        <li class="header__nav-item"><a href="#">Главная</a></li>
+                        <li class="header__nav-item"><a href="#">Обращения граждан</a></li>
+                        <li class="header__nav-item"><a href="#">Контакты</a></li>
+                    </ul>
+                </div>
+                <!-- <p>ПРОЕКТ СИБИРСКОГО ГОСУДАРСТВЕННОГО АВТОМОБИЛЬНО-ДОРОЖНОГО УНИВЕРСИТЕТА (СИБАДИ)</p> -->
+                <a href="https://sibadi.org" target="_blank"><img src="img/SibADI_logo.png" alt="СИБАДИ" class="sib-logo"></a>
 		</div>
     </header>
     <section class="promo">
@@ -31,19 +33,22 @@
     <section class="stats">
         <div class="container">
             <div class="stats__wraper">
-                <div class="stats__item">
+                <div class="stats__item stats__item_road">
                     <div class="stats__number stats__number_road">45</div>
                     <div class="stats__descr">Безопасность на дорогах</div> 
+                    <hr>
                     <button class="button button_road" onclick="location.href='apeal.html'">Сообщить о проблеме</button> 
                 </div>
-                <div class="stats__item">
+                <div class="stats__item stats__item_live">
                     <div class="stats__number stats__number_live">30</div>
                     <div class="stats__descr">Комфортность проживания</div>  
+                    <hr>
                     <button class="button button_live" onclick="location.href='apeal.html'">Сообщить о проблеме</button> 
                 </div>
-                <div class="stats__item">
+                <div class="stats__item stats__item_solved">
                     <div class="stats__number stats__number_solved">30</div>
                     <div class="stats__descr">Решенные проблемы</div>  
+                    <hr>
                     <button class="button button_solved">Просмотреть список</button> 
                 </div>
             </div>
