replaced code in wwwroot with code from UI

--- a/UI/index.html
+++ b/UI/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Безопасный и комфортный город</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.7.0/dist/css/uikit.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.7.0/dist/css/uikit.min.css"/>
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -13,13 +13,12 @@
 		<div class="container">
             <div class="header__wraper">
                 <div class="header__menu">
-                    <ul class="header__nav">
+                    <ul class="header__nav" id="navbarContent">
                         <li class="header__nav-item"><a href="#">Главная</a></li>
                         <li class="header__nav-item"><a href="#">Обращения граждан</a></li>
                         <li class="header__nav-item"><a href="#">Контакты</a></li>
                     </ul>
                 </div>
-                <!-- <p>ПРОЕКТ СИБИРСКОГО ГОСУДАРСТВЕННОГО АВТОМОБИЛЬНО-ДОРОЖНОГО УНИВЕРСИТЕТА (СИБАДИ)</p> -->
                 <a href="https://sibadi.org" target="_blank"><img src="img/SibADI_logo.png" alt="СИБАДИ" class="sib-logo"></a>
 		</div>
     </header>
@@ -110,4 +109,4 @@
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.0/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.0/dist/js/uikit-icons.min.js"></script>
 </body>
-</html>
+</html> -->
