--- a/SafeCity/SafeCity.Client/wwwroot/index.html
+++ b/SafeCity/SafeCity.Client/wwwroot/index.html
@@ -15,12 +15,12 @@
                 <div class="header__menu">
                     <ul class="header__nav" id="navbarContent">
                         <li class="header__nav-item"><a href="#">Главная</a></li>
-                        <li class="header__nav-item"><a href="#">Обращения граждан</a></li>
-                        <li class="header__nav-item"><a href="#">Контакты</a></li>
+                        <li class="header__nav-item"><a href="citizensAppeals.html">Обращения граждан</a></li>
+                        <!-- <li class="header__nav-item"><a href="#">Контакты</a></li> -->
                     </ul>
                 </div>
-                <!-- <p>ПРОЕКТ СИБИРСКОГО ГОСУДАРСТВЕННОГО АВТОМОБИЛЬНО-ДОРОЖНОГО УНИВЕРСИТЕТА (СИБАДИ)</p> -->
                 <a href="https://sibadi.org" target="_blank"><img src="img/SibADI_logo.png" alt="СИБАДИ" class="sib-logo"></a>
+            </div>
 		</div>
     </header>
     <section class="promo">
@@ -52,13 +52,14 @@
                     <button class="button button_solved">Просмотреть список</button> 
                 </div>
             </div>
+        <p>Также, вы можете подать свое обращение в нашем телеграм-боте <a href="https://t.me/bkg_sibadibot" target="_blank">https://t.me/bkg_sibadibot</a></p>
         </div>
     </section>
 
     <section class="map">
         <div class="container">
             <script type="text/javascript" charset="utf-8" async
-            src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab02f5bb7ef00f5ce40b2b7ff25c85fcbeb539c8296cd89e973032043df5831fe&amp;width=100%&amp;height=433&amp;lang=ru_RU&amp;scroll=true">
+            src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Ab02f5bb7ef00f5ce40b2b7ff25c85fcbeb539c8296cd89e973032043df5831fe&amp;width=100%&amp;height=600&amp;lang=ru_RU&amp;scroll=true">
             </script>
         </div>
     </section>
