--- a/SafeCity/SafeCity.Client/wwwroot/apeal.html
+++ b/SafeCity/SafeCity.Client/wwwroot/apeal.html
@@ -8,41 +8,26 @@
 
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/appeal.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
 
 
     <title>Безопасный и комфортный город</title>
 </head>
 
 <body>
-    <header class="header container-lg">
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
-                aria-controls="navbarContent" aria-expanded="false">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-
-            <div class="collapse navbar-collapse" id="navbarContent">
-                <ul class="navbar-nav ms-auto mb-2">
-                    <li class="nav-item ">
-                        <a class="nav-link" href="index.html">
-                            <div class="linc-color">Главная</div>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="">
-                            <div class="linc-color">Решение проблемы</div>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">
-                            <div class="linc-color">Контакты</div>
-                        </a>
-                    </li>
-                </ul>
+    <header class="header">
+		<div class="container">
+            <div class="header__wraper">
+                <div class="header__menu">
+                    <ul class="header__nav" id="navbarContent">
+                        <li class="header__nav-item"><a href="index.html">Главная</a></li>
+                        <li class="header__nav-item"><a href="citizensAppeals.html">Обращения граждан</a></li>
+                        <!-- <li class="header__nav-item"><a href="#">Контакты</a></li> -->
+                    </ul>
+                </div>
+                <a href="https://sibadi.org" target="_blank"><img src="img/SibADI_logo.png" alt="СИБАДИ" class="sib-logo"></a>
             </div>
-        </nav>
+		</div>
     </header>
 
     <form class="container-lg appeal" name="feedback" method="POST" action="">
@@ -73,9 +58,9 @@
                     id="input_message">
             </div>
 
-            <!--<div class="appeal__item">
-                <input type="file">
-            </div>-->
+            <div class="appeal__item">
+                <input type="file" id="file">
+            </div>
 
             <div class="appeal__item">
                 <input type="checkbox" id="check"> Я согласен / cогласна на обработку персональных данных
@@ -86,28 +71,23 @@
             </div>
         </div>
     </form>
-
-
-    <footer class="footer">
-        <div class="container-lg">
-            <div class="footer--inner">
-                <div class="footer--item">
-                    Контакты и обращения <br>
-                    8-950-783-62-65 <br>
-                    bkg@sibadi.org
-                </div>
-                <div class="footer--item">
-                    2021 ФГБОУ ВО «СибАДИ» <br>
-                    644080, г. Омск, пр. Мира 5
-                </div>
-                <div class="footer--item">
-                    <a style="color: white; text-decoration: none;" href=""> Техподдержка сайта <br> </a>
-                    <a style="color: white; text-decoration: none;" href=""> Карта сайта<br> </a>
-                </div>
+    <footer class="footer">  
+        <div class="footer__wraper">
+            <div class="footer__item">
+                Контакты и обращения <br>
+                8-950-783-62-65 <br>
+                bkg@sibadi.org 
+            </div>
+            <div class="footer__item">
+                2021 ФГБОУ ВО «СибАДИ» <br>
+                644080, г. Омск, пр. Мира 5
+            </div>
+            <div class="footer__item">
+                <a style="color: white; text-decoration: none;" href=""> Техподдержка сайта <br> </a>
+                <a style="color: white; text-decoration: none;" href=""> Карта сайта<br> </a>
             </div>
         </div>
     </footer>
-
     <script src="js/appeal.js"></script>
 </body>
 
