small header changes

--- a/SafeCity/SafeCity.Client/wwwroot/apeal.html
+++ b/SafeCity/SafeCity.Client/wwwroot/apeal.html
@@ -19,7 +19,11 @@
                         <!-- <li class="header__nav-item"><a href="#">Контакты</a></li> -->
                     </ul>
                 </div>
-                <a href="https://sibadi.org" target="_blank"><img src="img/SibADI_logo.png" alt="СИБАДИ" class="sib-logo"></a>
+                <div class="side">
+                    <button class="button button_header" onclick="location.href='apeal.html'">Сообщить о проблеме</button>
+                    <a href="https://sibadi.org" target="_blank"><img src="img/SibADI_logo.png" alt="СИБАДИ" class="side__sib-logo"></a>
+                    <a href="https://t.me/bkg_sibadibot" target="_blank"><img src="img/qr.png" alt="Телеграм бот" class="side__qr"></a>
+                </div>
             </div>
 		</div>
     </header>
