header and stats border changes (#14)
* header and stats border changes

* replaced code in wwwroot with code from UI

* try to fix bug

* new tab citizensAppeals according to Pestovas requirements

* filter.js redacted

Co-authored-by: Shuvalov Maxim <shuvalov99.me@gmail.com>

--- a/UI/index.html
+++ b/UI/index.html
@@ -1,24 +1,25 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Безопасный и комфортный город</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.7.0/dist/css/uikit.min.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/uikit@3.7.0/dist/css/uikit.min.css"/>
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
     <header class="header">
 		<div class="container">
-			<div class="header__menu">
-				<ul class="header__nav">
-					<li class="header__nav-item"><a href="#">Главная</a></li>
-					<li class="header__nav-item"><a href="#">Обращения граждан</a></li>
-					<li class="header__nav-item"><a href="#">Контакты</a></li>
-				</ul>
-			</div>
-            <p>ПРОЕКТ СИБИРСКОГО ГОСУДАРСТВЕННОГО АВТОМОБИЛЬНО-ДОРОЖНОГО УНИВЕРСИТЕТА (СИБАДИ)</p>
+            <div class="header__wraper">
+                <div class="header__menu">
+                    <ul class="header__nav" id="navbarContent">
+                        <li class="header__nav-item"><a href="#">Главная</a></li>
+                        <li class="header__nav-item"><a href="#">Обращения граждан</a></li>
+                        <li class="header__nav-item"><a href="#">Контакты</a></li>
+                    </ul>
+                </div>
+                <a href="https://sibadi.org" target="_blank"><img src="img/SibADI_logo.png" alt="СИБАДИ" class="sib-logo"></a>
 		</div>
     </header>
     <section class="promo">
@@ -31,19 +32,22 @@
     <section class="stats">
         <div class="container">
             <div class="stats__wraper">
-                <div class="stats__item">
+                <div class="stats__item stats__item_road">
                     <div class="stats__number stats__number_road">45</div>
                     <div class="stats__descr">Безопасность на дорогах</div> 
+                    <hr>
                     <button class="button button_road" onclick="location.href='apeal.html'">Сообщить о проблеме</button> 
                 </div>
-                <div class="stats__item">
+                <div class="stats__item stats__item_live">
                     <div class="stats__number stats__number_live">30</div>
                     <div class="stats__descr">Комфортность проживания</div>  
+                    <hr>
                     <button class="button button_live" onclick="location.href='apeal.html'">Сообщить о проблеме</button> 
                 </div>
-                <div class="stats__item">
+                <div class="stats__item stats__item_solved">
                     <div class="stats__number stats__number_solved">30</div>
                     <div class="stats__descr">Решенные проблемы</div>  
+                    <hr>
                     <button class="button button_solved">Просмотреть список</button> 
                 </div>
             </div>
@@ -105,4 +109,4 @@
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.0/dist/js/uikit.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/uikit@3.7.0/dist/js/uikit-icons.min.js"></script>
 </body>
-</html>
+</html> -->
