--- a/SafeCity/SafeCity.Client/wwwroot/apeal.html
+++ b/SafeCity/SafeCity.Client/wwwroot/apeal.html
@@ -1,114 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/appeal.css">
-    <link rel="stylesheet" href="css/style.css">
-
-
     <title>Безопасный и комфортный город</title>
+    <link rel="stylesheet" href="css/style.min.css">
 </head>
 
 <body>
-    <header class="header container-lg">
-        <nav class="navbar navbar-expand-md navbar-light bg-light">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
-                aria-controls="navbarContent" aria-expanded="false">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-
-            <div class="collapse navbar-collapse" id="navbarContent">
-                <ul class="navbar-nav ms-auto mb-2">
-                    <li class="nav-item ">
-                        <a class="nav-link" href="index.html">
-                            <div class="linc-color">Главная</div>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link " href="">
-                            <div class="linc-color">Решение проблемы</div>
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="">
-                            <div class="linc-color">Контакты</div>
-                        </a>
-                    </li>
-                </ul>
+    <header class="header">
+		<div class="container">
+            <div class="header__wraper">
+                <div class="header__menu">
+                    <ul class="header__nav" id="navbarContent">
+                        <li class="header__nav-item"><a href="index.html">Главная</a></li>
+                        <li class="header__nav-item"><a href="citizensAppeals.html">Обращения граждан</a></li>
+                        <!-- <li class="header__nav-item"><a href="#">Контакты</a></li> -->
+                    </ul>
+                </div>
+                <div class="side">
+                    <button class="button button_header" onclick="location.href='apeal.html'">Сообщить о проблеме</button>
+                    <a href="https://sibadi.org" target="_blank"><img src="img/SibADI_logo.png" alt="СИБАДИ" class="side__sib-logo"></a>
+                    <a href="https://t.me/bkg_sibadibot" target="_blank"><img src="img/qr.png" alt="Телеграм бот" class="side__qr"></a>
+                </div>
             </div>
-        </nav>
+		</div>
     </header>
-
-    <div class="container-lg appeal" name="feedback">
-        <div class="appeal__inner">
+    <section class="appeal">
+        <div class="container">
             <div class="appeal__title">
-                <h1>Форма обратной cвязи</h1>
+                <h1>Подать обращение</h1>
             </div>
-            <div class="appeal__item">
-                <select id="appealCategory" class="appeal__select">
-                    <option selected="selected" value="10">Выберите категорию обращения</option>
-                </select>
-            </div>
-
-            <div class="appeal__item">
-                <input type="email" required placeholder="Email" class="appeal__iput" id="input_email">
-            </div>
-
-            <div class="appeal__item">
-                <input type="text" required placeholder="Телефон" class="appeal__iput" id="input_phone">
-            </div>
-
-            <div class="appeal__item">
-                <input type="text" required placeholder="Адрес" class="appeal__iput" id="input_address">
-            </div>
-
-            <div class="appeal__item">
-                <input type="text" required placeholder="Введите ваше обращение" class="appeal__message"
-                    id="input_message">
-            </div>
-
-            <div class="appeal__item">
-                <input type="file" id="attachment">
-            </div>
-
-            <div class="appeal__item">
-                <input type="checkbox" id="check"> Я согласен / cогласна на обработку персональных данных
-            </div>
-
-            <div class="button">
-                <button class="btn btn-primary" onclick="postAppeal()">Отправить</button>
+            <div class="appeal__content">
+                <div class="appeal__descr">Выберите категорию обращения</div>
+                <div class="appeal__item">
+                    <select id="appealCategory" class="appeal__select">
+                        <option selected="selected" value="10">Выберите категорию обращения</option>
+                    </select>
+                </div>
+                <div class="appeal__descr">Укажите адрес электронной почты, на которую придет ответ по обработке обращения</div>
+                <div class="appeal__item">
+                    <input type="email" required placeholder="Email" class="appeal__input" id="input_email">
+                </div>
+                <div class="appeal__descr">Укажите Ваш номер телефона</div>
+                <div class="appeal__item">
+                    <input type="text" required placeholder="Телефон" class="appeal__input" id="input_phone">
+                </div>    
+                <div class="appeal__descr">Укажите адрес проблемного места или ближайший к нему</div>
+                <div class="appeal__item">
+                    <input type="text" required placeholder="Адрес" class="appeal__input" id="input_address">
+                </div>    
+                <div class="appeal__descr">Опишите проблему</div>
+                <div class="appeal__item">
+                    <input type="text" required placeholder="Опишите проблему" class="appeal__message"
+                        id="input_message">
+                </div>    
+                <div class="appeal__descr">Прикрепите фотографию размером до двух МБ (.jpg, .jpeg, .png, .pdf) </div>
+                <div class="appeal__item">
+                    <input type="file" id="file">
+                </div>    
+                <div class="appeal__item">
+                    <input type="checkbox" id="check"> Я согласен / cогласна на обработку персональных данных
+                </div>    
+                <div class="appeal__item appeal__item_button">
+                    <button class="button button_appeal" onclick="postAppeal()">Отправить</button>
+                </div>
+                
             </div>
         </div>
-    </div>
-
-
-    <footer class="footer">
-        <div class="container-lg">
-            <div class="footer--inner">
-                <div class="footer--item">
-                    Контакты и обращения <br>
-                    8-950-783-62-65 <br>
-                    bkg@sibadi.org
-                </div>
-                <div class="footer--item">
-                    2021 ФГБОУ ВО «СибАДИ» <br>
-                    644080, г. Омск, пр. Мира 5
-                </div>
-                <div class="footer--item">
-                    <a style="color: white; text-decoration: none;" href=""> Техподдержка сайта <br> </a>
-                    <a style="color: white; text-decoration: none;" href=""> Карта сайта<br> </a>
-                </div>
+    </section>
+    <footer class="footer">  
+        <div class="footer__wraper">
+            <div class="footer__item">
+                Контакты и обращения <br>
+                8-950-783-62-65 <br>
+                bkg@sibadi.org 
+            </div>
+            <div class="footer__item">
+                2021 ФГБОУ ВО «СибАДИ» <br>
+                644080, г. Омск, пр. Мира 5
+            </div>
+            <div class="footer__item">
+                <a style="color: white; text-decoration: none;" href=""> Техподдержка сайта <br> </a>
+                <a style="color: white; text-decoration: none;" href=""> Карта сайта<br> </a>
             </div>
         </div>
     </footer>
-
     <script src="js/appeal.js"></script>
 </body>
-
 </html>
